rewrote caustics rendering in three.js

--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>My first three.js app</title>
+    <title>Caustics Test</title>
     <style> body { margin: 0; } </style>
+    <style>
+    canvas {
+        width: 100vw;
+        height: 100vh;
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -9999;
+      }
+    </style>
 </head>
 <body>
     <script type="importmap">
