--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Caustics Test</title>
+    <link rel="icon" type="image/x-icon" href="#">
     <style> body { margin: 0; } </style>
     <style>
     canvas {
