--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "https://cdn.skypack.dev/three@0.145.0/build/three.module"
+                "threeCDN": "https://cdn.skypack.dev/three@0.145.0/build/three.module",
+                "three": "/three.module.js"
             }
         }
     </script>
-    <script type="module" src="/webgl_caustics.js"></script>
+    <script type="module" src="/webgl_caustics_refactor.js"></script>
 </body>
 </html>
