rename / delete script, comments

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
             }
         }
     </script>
-    <script type="module" src="/webgl_caustics_refactor.js"></script>
+    <script type="module" src="/webgl_caustics.js"></script>
 </body>
 </html>
